# server-rs

./: Cargo.toml  Dockerfile
examples/: search.rs  tantivy-search.rs
migrations/2024-02-27-112316_cearte_doc/: down.sql  up.sql
src/: error.rs  lib.rs  main.rs  schema.rs
src/crawler/: file.rs  mod.rs
src/nlpcut/: mod.rs
src/search/: engine.rs
